--- a/index.html
+++ b/index.html
@@ -37,14 +37,28 @@
 
     <div class="news">
         <h1 class="ecu-header">ECU News</h1>
-        
-            <article>
-                <img src="fusion-medical-animation-rnr8D3FNUNY-unsplash.jpg" alt="Covid-19 Illustration">
-                <p>
-                    Covid-19: New strain of the virus found in the UK is said to be deadlier than other strains
-                </p>
-            </article>
+
+        <table>
+            <colgroup>
+                <col span="2">
+            </colgroup>
+            <td>
+                <article>
+                    <img src="fusion-medical-animation-rnr8D3FNUNY-unsplash.jpg" alt="Covid-19 Illustration">
+                    <p>
+                        Covid-19: New strain of the virus found in the UK is said to be deadlier than other strains
+                    </p>
+                </article>
+            </td>
+            <td>
+                <article class="grad">
+                    <img src="vasily-koloda-8CqDvPuo_kI-unsplash.jpg" alt="">
+                </article>
+            </td>
+        </table>
     </div>
+
+
 </body>
 
 </html>
