--- a/index.html
+++ b/index.html
@@ -53,11 +53,27 @@
             <td>
                 <article class="grad">
                     <img src="vasily-koloda-8CqDvPuo_kI-unsplash.jpg" alt="">
+                    <p>
+                        2021 Graduation Ceremony: ECU holds virtual graduation for 2021 set
+                    </p>
                 </article>
             </td>
         </table>
+        
+        <div class="more-news">
+            <p>
+                More News
+            </p>
+        </div>
     </div>
 
+    <div class="apply">
+        <img src="thisisengineering-raeng-H4ClLKv3pqw-unsplash.jpg" alt="Two Students With A Robot">
+
+        <div class="apply-now">
+            <p>Apply Now</p>
+        </div>
+    </div>
 
 </body>
 
