--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </article>
             </td>
         </table>
-        
+
         <div class="more-news">
             <p>
                 More News
@@ -72,6 +72,12 @@
 
         <div class="apply-now">
             <p>Apply Now</p>
+        </div>
+
+        <div class="dive">
+            <p>
+                Dive into the world of AI and Robotics
+            </p>
         </div>
     </div>
 
