--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@700&display=swap" rel="stylesheet">
     <title>Enford City University</title>
 </head>
 
@@ -33,6 +39,9 @@
 
     <section>
         <img src="wonderlane-6zlgM-GUd6I-unsplash.jpg" alt="ECU Environment">
+        <div class="landing-page">
+            <p> Welcome To Enford City University</p>
+        </div>
     </section>
 
     <br>
@@ -84,7 +93,48 @@
         </div>
     </div>
 
-    
+    <footer>
+        <img src="ECU Grey.png" alt="ECU Logo" class="ecu-white">
+        <section>
+            <ol class="footer-item1">
+                <li>Alumni</li>
+                <li>Faculty</li>
+                <li>Admission</li>
+                <li>Staff</li>
+            </ol>
+        </section>
+
+        <section>
+            <ol class="footer-item2">
+                <li>Contact</li>
+                <li>Privacy</li>
+                <li>Emergency</li>
+                <li>Campus Map</li>
+                <li>Careers</li>
+            </ol>
+        </section>
+
+        <section>
+            <ol class="footer-item3">
+                <li>Libraries</li>
+                <li>A-Z Directories</li>
+                <li>News & Media</li>
+            </ol>
+        </section>
+
+        <div class="socials">
+            <img src="twitter (2).png" alt="">
+            <img src="facebook (1).png" alt="">
+            <img src="instagram-logo.png" alt="">
+            <img src="youtube.png" alt="">
+        </div>
+
+        <p class="copyright">
+            Copyright @ 2021 Enford City University.
+        </p>
+
+    </footer>
+
 </body>
 
 </html>
