--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ecu.css">
+    <link rel="icon" href="ECU.png" sizes="16x16" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
@@ -23,6 +24,7 @@
 
 <body>
     <img src="ECU.png" alt="Enford City University Logo" class="ECU">
+    <hr class="hr-search">
     <hr>
 
 
@@ -42,10 +44,14 @@
         <div class="landing-page">
             <p> Welcome To Enford City University</p>
         </div>
+
+        <div class="rated">
+            <p> Rated amongst the top 20 universities in the world by Forbes</p>
+        </div>
     </section>
 
-    <br>
-    <br>
+    <!-- <br>
+    <br> -->
 
     <div class="news">
         <h1 class="ecu-header">ECU News</h1>
